blog/infra/k8s/posts-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
       containers:
         - name: posts
           image: babadie10/post
       imagePullSecrets:
         - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
